// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration Login works with valid credentials 1`] = `

    login {
      email: testIntegration@bf.uzh.ch
      shortname: integr
      runningSession: false
    }
  
`;

exports[`Integration Question Archiving can archive questions 1`] = `

    archiveQuestions: [
      isArchived: true
    ,
      isArchived: true
    ]
  
`;

exports[`Integration Question Archiving can unarchive questions 1`] = `

    archiveQuestions: [
      isArchived: false
    ,
      isArchived: false
    ]
  
`;

exports[`Integration Question Creation creates FREE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE
      type: FREE
      tags: TestTag
      versions: 
        description: This is a simple FREE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":null}
        solution: {"SC":[],"MC":[],"FREE":"This is true.","FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Creation creates FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE_RANGE
      type: FREE_RANGE
      tags: TestTag
      versions: 
        description: This is a simple FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":0,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":5}
      
    }
  
`;

exports[`Integration Question Creation creates MC questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test MC
      type: MC
      tags: TestTag
      versions: 
        description: This is a simple MC question.
        options: {"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false},"FREE_RANGE":null}
        solution: {"SC":[],"MC":[false,true,true],"FREE":null,"FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Creation creates SC questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test SC
      type: SC
      tags: TestTag
      versions: 
        description: This is a simple SC question.
        options: {"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null,"FREE_RANGE":null}
        solution: {"SC":[false,true],"MC":[],"FREE":null,"FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Creation creates partly restricted FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test partly restricted FREE_RANGE
      type: FREE_RANGE
      tags: TestTag
      versions: 
        description: This is a simple partly restricted FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":10,"max":null}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":15}
      
    }
  
`;

exports[`Integration Question Creation creates unrestricted FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test unrestricted FREE_RANGE
      type: FREE_RANGE
      tags: TestTag
      versions: 
        description: This is a simple unrestricted FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":null,"max":null}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":20}
      
    }
  
`;

exports[`Integration Question Modification modifies FREE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE #2
      type: FREE
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple FREE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":null}
        solution: {"SC":[],"MC":[],"FREE":"This is true.","FREE_RANGE":null}
      ,
        description: This is a simple modified FREE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":null}
        solution: {"SC":[],"MC":[],"FREE":"New solution.","FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Modification modifies FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE_RANGE #2
      type: FREE_RANGE
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":0,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":5}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":-10,"max":40}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":16}
      
    }
  
`;

exports[`Integration Question Modification modifies MC questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test MC #2
      type: MC
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple MC question.
        options: {"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false},"FREE_RANGE":null}
        solution: {"SC":[],"MC":[false,true,true],"FREE":null,"FREE_RANGE":null}
      ,
        description: This is a simple modified MC question.
        options: {"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false},"FREE_RANGE":null}
        solution: {"SC":[],"MC":[true,false,true],"FREE":null,"FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Modification modifies SC questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test SC #2
      type: SC
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple SC question.
        options: {"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null,"FREE_RANGE":null}
        solution: {"SC":[false,true],"MC":[],"FREE":null,"FREE_RANGE":null}
      ,
        description: This is a simple modified SC question.
        options: {"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null,"FREE_RANGE":null}
        solution: {"SC":[true,false],"MC":[],"FREE":null,"FREE_RANGE":null}
      
    }
  
`;

exports[`Integration Question Modification modifies partly restricted FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE_RANGE #2
      type: FREE_RANGE
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":0,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":5}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":-10,"max":40}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":16}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":null,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":6}
      
    }
  
`;

exports[`Integration Question Modification modifies unrestricted FREE_RANGE questions 1`] = `

    createQuestion / modifyQuestion {
      title: Test FREE_RANGE #2
      type: FREE_RANGE
      tags: TestTag,AdditionalTag
      versions: 
        description: This is a simple FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":0,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":5}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":-10,"max":40}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":16}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":null,"max":10}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":6}
      ,
        description: This is a simple modified FREE_RANGE question.
        options: {"SC":null,"MC":null,"FREE_RANGE":{"restrictions":{"min":null,"max":null}}}
        solution: {"SC":[],"MC":[],"FREE":null,"FREE_RANGE":16}
      
    }
  
`;

exports[`Integration Session Creation works 1`] = `

    createSession {
      confusionTS: 
      feedbacks: 
      blocks: 
        status: PLANNED
        instances: 
          title: Test SC #2
          type: SC
        ,
          title: Test MC #2
          type: MC
        
      ,
        status: PLANNED
        instances: 
          title: Test FREE #2
          type: FREE
        
      ,
        status: PLANNED
        instances: 
          title: Test FREE_RANGE #2
          type: FREE_RANGE
        ,
          title: Test partly restricted FREE_RANGE
          type: FREE_RANGE
        ,
          title: Test unrestricted FREE_RANGE
          type: FREE_RANGE
        
      
      settings: {"isConfusionBarometerActive":false,"isFeedbackChannelActive":false,"isFeedbackChannelPublic":false}
    }
  
`;

exports[`Integration Session Execution allows adding confusion timesteps 1`] = `
Object {
  "addConfusionTS": "CONFUSION_ADDED",
}
`;

exports[`Integration Session Execution allows adding feedbacks 1`] = `
Object {
  "addFeedback": "FEEDBACK_ADDED",
}
`;

exports[`Integration Session Execution allows completing sessions 1`] = `

    startSession / endSession {
      status: COMPLETED
    }
  
`;

exports[`Integration Session Execution allows evaluating sessions after completion 1`] = `

    evaluateSession {
      status: COMPLETED
      blocks: 
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
            versions: 
              description: This is a simple SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
            ,
              description: This is a simple modified SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null}
            
          }
          results: {"CHOICES":[1,0]}
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
            versions: 
              description: This is a simple MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
            ,
              description: This is a simple modified MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false}}
            
          }
          results: {"CHOICES":[1,1,0]}
          responses: 
        
      ,
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
            versions: 
              description: This is a simple FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"5eb63bbbe01eeed093cb22bb8f5acdc3","value":"hello world"}]}
          responses: hello world
        
      ,
        status: EXECUTED
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
            versions: 
              description: This is a simple FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":-10,"max":40}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"a87ff679a2f3e71d9181a67b7542122c","value":"4"}]}
          responses: 4
        ,
          isOpen: true
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple partly restricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"d3eb9a9233e52948740d7eb8c3062d14","value":"99999"}]}
          responses: 99999
        ,
          isOpen: true
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple unrestricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"e4b1fc5758fb519823c9f2feb30b9a87","value":"99999.3784"}]}
          responses: 99999.3784
        
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can activate the first question block 1`] = `

    activateNextBlock {
      blocks: 
        status: ACTIVE
        instances: true,true
      ,
        status: PLANNED
        instances: false
      ,
        status: PLANNED
        instances: false,false,false
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can activate the second question block 1`] = `

    activateNextBlock {
      blocks: 
        status: EXECUTED
        instances: false,false
      ,
        status: ACTIVE
        instances: true
      ,
        status: PLANNED
        instances: false,false,false
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can activate the third question block 1`] = `

    activateNextBlock {
      blocks: 
        status: EXECUTED
        instances: false,false
      ,
        status: EXECUTED
        instances: false
      ,
        status: ACTIVE
        instances: true,true,true
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can close the first question block 1`] = `

    activateNextBlock {
      blocks: 
        status: EXECUTED
        instances: false,false
      ,
        status: PLANNED
        instances: false
      ,
        status: PLANNED
        instances: false,false,false
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can close the second question block 1`] = `

    activateNextBlock {
      blocks: 
        status: EXECUTED
        instances: false,false
      ,
        status: EXECUTED
        instances: false
      ,
        status: PLANNED
        instances: false,false,false
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can close the third question block 1`] = `

    activateNextBlock {
      blocks: 
        status: EXECUTED
        instances: false,false
      ,
        status: EXECUTED
        instances: false
      ,
        status: EXECUTED
        instances: true,true,true
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the first question block 1`] = `

    runningSession {
      activeStep: 1
      confusionTS: 
        difficulty: 2
        speed: 4
      ,
        difficulty: -2
        speed: 3
      ,
        difficulty: -5
        speed: 3
      ,
        difficulty: 5
        speed: 2
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
      blocks: 
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test SC #2
            type: SC
          }
        ,
          isOpen: true
          version: 0
          question {
            title: Test MC #2
            type: MC
          }
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
          }
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
          }
        
      
      settings: {"isConfusionBarometerActive":true,"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true}
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the first question block 2`] = `

    evaluateSession {
      status: RUNNING
      blocks: 
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test SC #2
            type: SC
            versions: 
              description: This is a simple SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
            ,
              description: This is a simple modified SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null}
            
          }
          results: {"CHOICES":[1,0]}
          responses: 
        ,
          isOpen: true
          version: 0
          question {
            title: Test MC #2
            type: MC
            versions: 
              description: This is a simple MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
            ,
              description: This is a simple modified MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false}}
            
          }
          results: {"CHOICES":[1,1,0]}
          responses: 
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
            versions: 
              description: This is a simple FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
            versions: 
              description: This is a simple FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":-10,"max":40}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple partly restricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple unrestricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the second question block 1`] = `

    runningSession {
      activeStep: 3
      confusionTS: 
        difficulty: 2
        speed: 4
      ,
        difficulty: -2
        speed: 3
      ,
        difficulty: -5
        speed: 3
      ,
        difficulty: 5
        speed: 2
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
      blocks: 
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
          }
        
      ,
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test FREE #2
            type: FREE
          }
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
          }
        
      
      settings: {"isConfusionBarometerActive":true,"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true}
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the second question block 2`] = `

    evaluateSession {
      status: RUNNING
      blocks: 
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
            versions: 
              description: This is a simple SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
            ,
              description: This is a simple modified SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null}
            
          }
          results: {"CHOICES":[1,0]}
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
            versions: 
              description: This is a simple MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
            ,
              description: This is a simple modified MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false}}
            
          }
          results: {"CHOICES":[1,1,0]}
          responses: 
        
      ,
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test FREE #2
            type: FREE
            versions: 
              description: This is a simple FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"5eb63bbbe01eeed093cb22bb8f5acdc3","value":"hello world"}]}
          responses: hello world
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
            versions: 
              description: This is a simple FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":-10,"max":40}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple partly restricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple unrestricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the third question block 1`] = `

    runningSession {
      activeStep: 5
      confusionTS: 
        difficulty: 2
        speed: 4
      ,
        difficulty: -2
        speed: 3
      ,
        difficulty: -5
        speed: 3
      ,
        difficulty: 5
        speed: 2
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
      blocks: 
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
          }
        
      ,
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
          }
        
      ,
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
          }
        ,
          isOpen: true
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
          }
        ,
          isOpen: true
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
          }
        
      
      settings: {"isConfusionBarometerActive":true,"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true}
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can evaluate the third question block 2`] = `

    evaluateSession {
      status: RUNNING
      blocks: 
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
            versions: 
              description: This is a simple SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
            ,
              description: This is a simple modified SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null}
            
          }
          results: {"CHOICES":[1,0]}
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
            versions: 
              description: This is a simple MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
            ,
              description: This is a simple modified MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false}}
            
          }
          results: {"CHOICES":[1,1,0]}
          responses: 
        
      ,
        status: EXECUTED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
            versions: 
              description: This is a simple FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"5eb63bbbe01eeed093cb22bb8f5acdc3","value":"hello world"}]}
          responses: hello world
        
      ,
        status: ACTIVE
        instances: 
          isOpen: true
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
            versions: 
              description: This is a simple FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":-10,"max":40}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"a87ff679a2f3e71d9181a67b7542122c","value":"4"}]}
          responses: 4
        ,
          isOpen: true
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple partly restricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"d3eb9a9233e52948740d7eb8c3062d14","value":"99999"}]}
          responses: 99999
        ,
          isOpen: true
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple unrestricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: {"FREE":[{"count":1,"key":"e4b1fc5758fb519823c9f2feb30b9a87","value":"99999.3784"}]}
          responses: 99999.3784
        
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can join the session initially 1`] = `

    runningSession {
      activeStep: 0
      confusionTS: 
        difficulty: 2
        speed: 4
      ,
        difficulty: -2
        speed: 3
      ,
        difficulty: -5
        speed: 3
      ,
        difficulty: 5
        speed: 2
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
      blocks: 
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
          }
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
          }
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
          }
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
          }
        
      
      settings: {"isConfusionBarometerActive":true,"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true}
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) LECTURER: can join the session initially 2`] = `

    evaluateSession {
      status: RUNNING
      blocks: 
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test SC #2
            type: SC
            versions: 
              description: This is a simple SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
            ,
              description: This is a simple modified SC question.
              options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"}],"randomized":false},"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test MC #2
            type: MC
            versions: 
              description: This is a simple MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
            ,
              description: This is a simple modified MC question.
              options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":true,"name":"option3"},{"correct":false,"name":"option4"},{"correct":true,"name":"option5"}],"randomized":false}}
            
          }
          results: null
          responses: 
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE #2
            type: FREE
            versions: 
              description: This is a simple FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE question.
              options: {"FREE_RANGE":null,"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        
      ,
        status: PLANNED
        instances: 
          isOpen: false
          version: 0
          question {
            title: Test FREE_RANGE #2
            type: FREE_RANGE
            versions: 
              description: This is a simple FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":-10,"max":40}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":10}},"SC":null,"MC":null}
            ,
              description: This is a simple modified FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test partly restricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple partly restricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        ,
          isOpen: false
          version: 0
          question {
            title: Test unrestricted FREE_RANGE
            type: FREE_RANGE
            versions: 
              description: This is a simple unrestricted FREE_RANGE question.
              options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
            
          }
          results: null
          responses: 
        
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) PARTICIPANT: can join the session initially 1`] = `

    joinSession {
      settings: {"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true,"isConfusionBarometerActive":true}
      activeQuestions: 
        title: Test SC #2
        description: This is a simple SC question.
        type: SC
        options: {"FREE_RANGE":null,"SC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"}],"randomized":false},"MC":null}
      ,
        title: Test MC #2
        description: This is a simple MC question.
        type: MC
        options: {"FREE_RANGE":null,"SC":null,"MC":{"choices":[{"correct":false,"name":"option1"},{"correct":true,"name":"option2"},{"correct":true,"name":"option3"}],"randomized":false}}
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) PARTICIPANT: can update the joined session for the second block 1`] = `

    joinSession {
      settings: {"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true,"isConfusionBarometerActive":true}
      activeQuestions: 
        title: Test FREE #2
        description: This is a simple FREE question.
        type: FREE
        options: {"FREE_RANGE":null,"SC":null,"MC":null}
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
    }
  
`;

exports[`Integration Session Execution allows running the full session flow (responding and evaluation) PARTICIPANT: can update the joined session for the third block 1`] = `

    joinSession {
      settings: {"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true,"isConfusionBarometerActive":true}
      activeQuestions: 
        title: Test FREE_RANGE #2
        description: This is a simple FREE_RANGE question.
        type: FREE_RANGE
        options: {"FREE_RANGE":{"restrictions":{"min":0,"max":10}},"SC":null,"MC":null}
      ,
        title: Test partly restricted FREE_RANGE
        description: This is a simple partly restricted FREE_RANGE question.
        type: FREE_RANGE
        options: {"FREE_RANGE":{"restrictions":{"min":10,"max":null}},"SC":null,"MC":null}
      ,
        title: Test unrestricted FREE_RANGE
        description: This is a simple unrestricted FREE_RANGE question.
        type: FREE_RANGE
        options: {"FREE_RANGE":{"restrictions":{"min":null,"max":null}},"SC":null,"MC":null}
      
      feedbacks: 
        content: my test feedback
        votes: 0
      ,
        content: good lecture
        votes: 0
      ,
        content: my test feedback
        votes: 0
      
    }
  
`;

exports[`Integration Session Execution allows starting sessions 1`] = `

    startSession / endSession {
      status: RUNNING
    }
  
`;

exports[`Integration Session Execution allows updating session settings 1`] = `

    updateSessionSettings {
      settings: {"isConfusionBarometerActive":true,"isFeedbackChannelActive":true,"isFeedbackChannelPublic":true}
    }
  
`;
